# lmti

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PLAN.md  README.md  TODO.md  justfile  pyproject.toml
src/lmsh/: __init__.py  cli.py  secrets.py  tui.py
src/lmti/: __init__.py  cli.py  config.py  errors.py  history.py  repl.py  secrets.py  tui.py  ui.py
src/lmti/commands/: __init__.py  copy.py  history.py  model.py  undo.py
