[project]
name = "lmsh"
version = "1.0.0"
description = "Language Models, as God intended."
requires-python = ">=3.12,<3.14"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.3",
    "lmtk"
]

[tool.uv]
package = true

# use this to install local dependencies
[tool.uv.sources]
lmtk = { path = "../lmtk", editable = true }

[dependency-groups]
dev = [
    "pytest-cov",
]  # complexipy, ruff, ty are run via uvx

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
lmsh = "lmsh.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmsh"]

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint]
select = ["D", "E", "F"]
ignore = ["D105", "D107"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ""
commit_message = "chore: release {version}"
commit_parser = "conventional"
tag_format = "v{version}"
changelog_file = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
