[project]
name = "lmti"
version = "1.3.0"
description = "Language Model Terminal Interface."
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.3",
    "lmdk>=1.2.1",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = true

# use this to install local dependencies
# [tool.uv.sources]
# lmdk = { path = "../dk", editable = true }

[dependency-groups]
dev = [
    "pytest-cov",
]  # complexipy, ruff, ty are run via uvx

[project.urls]
Homepage = "https://github.com/nachollorca/lmti"

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
lmti = "lmti.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmti"]

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint]
select = ["D", "E", "F"]
ignore = ["D105", "D107"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ""
commit_message = "chore: release {version}"
commit_parser = "conventional"
tag_format = "v{version}"
changelog_file = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
